@@ -148,7 +148,7 @@ SDCC Compiler User Guide
 \begin_layout Date
 
 \size normal
-SDCC 3.3.1
+SDCC 3.3.2
 \size footnotesize
 
 \begin_inset Newline newline
